# Chorus-Extraction

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/chorus_extraction/: __init__.py  __main__.py  audio_io.py  cli.py  config.py  errors.py  gui.py  logging_setup.py  pipeline.py  separator_runner.py
tests/: conftest.py  test_audio_io.py  test_cli.py  test_config.py  test_integration.py  test_pipeline.py
