[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chorus-extraction"
version = "0.1.0"
description = "Extract chorus (backing vocals / harmony) from audio using UVR models"
requires-python = ">=3.12"
dependencies = [
    "audio-separator[gpu]>=0.44,<0.46; sys_platform != 'darwin'",
    "audio-separator>=0.44,<0.46; sys_platform == 'darwin'",
    "typer>=0.12",
    "torch>=2.3",
]

[project.scripts]
chorus-extract = "chorus_extraction.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/chorus_extraction"]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8,<9",
    "pytest-cov>=5",
    "pytest-mock>=3",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: requires real model downloads (deselect with -m 'not integration')",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    # Windows / Linux x86_64: CUDA ビルド
    { index = "pytorch-cuda", marker = "sys_platform == 'win32' or (sys_platform == 'linux' and platform_machine == 'x86_64')" },
    # macOS: PyPI の CPU/MPS ビルドを使用（CUDA インデックスに macOS ホイールなし）
]

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "ANN", "S", "B", "SIM", "RUF"]
# RUF001/002/003: 日本語の全角括弧（）は意図的な表記
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN001", "ANN002", "ANN201", "ANN202", "E501"]

